# Trade-For-Me

./: .env.example  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260327_0001_init_tables.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  api_key.py  message.py  prompt.py  user.py
backend/app/schemas/: workflow.py
backend/app/scripts/: seed_demo.py
backend/app/services/: analysis_runner.py  auth.py  cli_mapping.py  conversation_state.py  orchestrator.py
cli/: utils.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.vue  App.vue.js  api.js  api.ts  style.css  types.ts  workbenchTypes.ts
frontend/src/components/: ChatMessageList.vue  ChatMessageList.vue.js  ConversationSidebar.vue  ConversationSidebar.vue.js  StepWorkflowPanel.vue  StepWorkflowPanel.vue.js  WorkbenchPanel.vue  WorkbenchPanel.vue.js
tradingagents/: default_config.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: portfolio_manager.py  research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: neutral_debator.py  (+2 more)
tradingagents/graph/: reflection.py  signal_processing.py
tradingagents/llm_clients/: factory.py  openai_client.py  validators.py
(+1 files in other folders)
